--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,8 @@ django-user-agents==0.4.0
 djangorestframework==3.12.4
 et-xmlfile==1.1.0
 future==0.18.2
+geographiclib==2.0
+geopy==2.3.0
 gunicorn==20.1.0
 html5lib==1.1
 idna==3.3
